# mycelisai

./: .dockerignore  .editorconfig  .env.compose.example  .env.example  .gitignore  .monokle  .npmrc  AGENTS.md  Makefile  README.md  V7_DEV_STATE.md  V8_DEV_STATE.md  architecture.md  debug.yaml  debug_manifest.yaml  dev.sh  docker-compose.yml  full_migration.sql  kind-config.gen.yaml  kind-config.yaml  migration-pod.yaml  myceles_v6_arch.md  mycelis-6-1-0-stable.md  mycelis-6-2.md  mycelis-architecture-v6.2.md  mycelis-architecture-v7.md  mycelis_v4_arch.md  mycelist_v5_arch.md  myclis_v3_arch.md  pyproject.toml  seeds.sql  tasks.py  test_chat.json  test_chat.py  test_output.txt  test_results.txt  ui_design_spec.md  v8-2.md  verify_mcp.py  verify_stack.py  (+1 more)
.claude/: settings.local.json
.logs/: sarif.json
.state/: V7_DEV_STATE.md  V8_DEV_STATE.md
agents/: base.py  llm.py  memory.py  prompts.py  reference_worker.py  runner.py
api/: main.py
architecture/: README.md  mycelis-architecture-v7.md  v8-2.md
cli/: README.md  main.py  pyproject.toml
cognitive/: pyproject.toml
cognitive/config/: engine.yaml
cognitive/src/: __init__.py  media_gateway.py  media_gateway_comfy.py  media_server.py
core/: Dockerfile  README.md  go.mod  go.sum  probe_integration_test.go  probe_test.go  test_output.txt
docs/: API_REFERENCE.md  COGNITIVE_ARCHITECTURE.md  LOCAL_DEV_WORKFLOW.md  PRD_PHASE12_HARDENING.md  PROVIDERS.md  QA_COUNCIL_CHAT_API.md  README.md  RELEASE_HANDOFF.md  REMOTE_USER_TESTING.md  SWARM.md  SWARM_OPERATIONS.md  TESTING.md  UI_ELEMENTS_PLANNING_V7.md  UI_FRAMEWORK_V7.md  V7_IMPLEMENTATION_PLAN.md  V7_MCP_BASELINE.md  WORKFLOWS.md  governance.md  implementation_plan.md  licensing.md  logging.md
gcp_conf_site/: README.md  app.py
interface/: .dockerignore  .npmrc  Dockerfile  README.md  middleware.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
k8s/: 01-nats.yaml  02-core.yaml  agents.yaml  api.yaml  ingress.yaml  mcp-bridge.yaml  namespace.yaml  nats.yaml  network-policy-provisioner.yaml  network-policy-registry.yaml  postgres.yaml  registry-deployment.yaml  ui.yaml
ops/: README.md  admission-control.yaml  audit-policy.yaml  auth.py  cache.py  ci.py  ci_pipeline.py  ci_release.py  cognitive.py  compose.py  compose_cognitive_warm.py  compose_env.py  compose_probe.py  compose_storage.py  compose_wsl_relay.py  config.py  core.py  db.py  db_context.py  dev.py  device.py  k8s.py  (+27 more)
(+1819 files in other folders)
