[project]
name = "scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "nats-py>=2.12.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "aiohttp>=3.11.0",
    "structlog>=24.1.0",
    "protobuf>=6.33.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "invoke>=2.2.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.uv.workspace]
members = [
    "cli",
]
