[project]
name = "mycelis-cognitive"
version = "0.1.0"
description = "Mycelis Cognitive Engine — vLLM text inference + Diffusers media generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # --- LLM Inference (vLLM) ---
    "vllm>=0.6.0",

    # --- Image Generation (Diffusers) ---
    "diffusers>=0.30.0",
    "accelerate>=0.33.0",
    "transformers>=4.44.0",

    # --- Media Server ---
    "fastapi>=0.112.0",
    "uvicorn>=0.30.0",
    "pillow>=10.4.0",

    # --- Utilities ---
    "pydantic>=2.8.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.uv]
managed = true
